# bgestures

./: CMakeLists.txt  README.md  bcutgesture.cpp  bcutgesture.h  bgesturewidget.cpp  bgesturewidget.h  bpolygongesture.cpp  bpolygongesture.h  bturngesture.cpp  bturngesture.h  bturngesturev2.cpp  bturngesturev2.h  main.cpp
